--- a/todo-app-ui/angular.json
+++ b/todo-app-ui/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "todo-app-ui": {
+    "todos-ui": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/todo-app-ui",
+            "outputPath": "dist/todos-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,9 +23,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -50,18 +56,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "todo-app-ui:build"
+            "browserTarget": "todos-ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "todo-app-ui:build:production"
+              "browserTarget": "todos-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "todo-app-ui:build"
+            "browserTarget": "todos-ui:build"
           }
         },
         "test": {
@@ -95,7 +101,7 @@
         }
       }
     },
-    "todo-app-ui-e2e": {
+    "todos-ui-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +109,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "todo-app-ui:serve"
+            "devServerTarget": "todos-ui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "todo-app-ui:serve:production"
+              "devServerTarget": "todos-ui:serve:production"
             }
           }
         },
@@ -123,5 +129,5 @@
       }
     }
   },
-  "defaultProject": "todo-app-ui"
+  "defaultProject": "todos-ui"
 }
